--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <body>
         <h1>Hello, World!</h1>
         <p>This is a basic paragraph in my HTML file.</p>
+        <p>Test to push through github.</p>
     </body>
     </html>
