--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
         <title>ColorMe</title>
     </head>
     <body>
+        <style>
+            body{
+                background-image: url('Screenshot 2025-09-29 220417.jpg');
+            }
+        </style>
         <h1>Hello, World!</h1>
         <p>This is a basic paragraph in my HTML file.</p>
         <p>Test to push through github.</p>
+        <a href="Login page.html" target=_blank title="Login into ColorMe">
+            <button style="background-color: bisque;color:rgb(38, 24, 4); border-radius: 5px">Login</button>
+        </a>
+        <h1 style="text-align: center;"">ColorMe</h1>
     </body>
     </html>
