--- a/index.html
+++ b/index.html
@@ -1,41 +1,50 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>ColorMe</title>
-        <style>
-            .login-button-container {
-                display: flex;
-                justify-content: center;
-                width: center;
-                align-items: center;
-                height: 3vh;
-                margin: 0;
-            }
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>ColorMe</title>
+</head>
+<body>
+  <!-- Background boxes -->
+  <div id="background"></div>
 
-            .middle-login {
-                padding: 12px 24px;
-                font-size: 16px;
-                background-color: bisque;
-                color: rgb(0, 0, 0);
-                border: none;
-                border-radius: 8px;
-                transition: background-color 0.3s;
-            }
-        </style>
-    </head>
-    <body>
-        <h1>Hello, World!</h1>
-        <p>This is a basic paragraph in my HTML file.</p>
-        <p>Test to push through github.</p>
-        <h1 style="text-align: center;"">ColorMe</h1>
-        <!--Note: 
-        1. Center login button underneath ColorMe
-        2. Apply a background image (was thinking the color wheel on slide)-->
-        
-        <div class="login-button-container">
-            <a href="Login page.html" class="middle-login"> Login</a>
-        </div>
-    </body>
-    </html>
+  <!-- Page content -->
+  <div class="content">
+    <h1>ColorMe</h1>
+
+    <div class="login-button-container">
+      <a href="Login page.html" class="middle-login">Login</a>
+    </div>
+
+    <div class="upload-box" id="drop">
+      <h2>Upload a Photo</h2>
+      <p>Choose a file or drag & drop an image here</p>
+      <input id="file" type="file" accept="image/*">
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+  <script>
+    // Drag & drop
+    const drop = document.getElementById('drop');
+    const fileInput = document.getElementById('file');
+
+    ['dragenter','dragover'].forEach(ev => drop.addEventListener(ev, e => {
+      e.preventDefault();
+      drop.classList.add('dragover');
+    }));
+
+    ['dragleave','drop'].forEach(ev => drop.addEventListener(ev, e => {
+      e.preventDefault();
+      drop.classList.remove('dragover');
+    }));
+
+    drop.addEventListener('drop', e => {
+      const file = e.dataTransfer.files[0];
+      if(file) fileInput.files = e.dataTransfer.files;
+    });
+  </script>
+</body>
+</html>
