--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-  <title>ColorMe</title>
+  <title>ColorMe</title> <!--1.-->
 </head>
 <body>
   <div id="background"></div>
 
   <div class="content">
     <h1>ColorMe</h1>
-
+                        <!--2.-->
     <div class="login-button-container">
       <a href="Login page.html" class="middle-login">Login</a>
-    </div>
-
+    </div>              <!--2-->
+                        <!--8.-->
     <div class="upload-box" id="drop">
       <h2>Upload a Photo</h2>
       <p>Choose a file or drag & drop an image here</p>
@@ -45,6 +45,6 @@
       const file = e.dataTransfer.files[0];
       if(file) fileInput.files = e.dataTransfer.files;
     });
-  </script>
+  </script>               <!--8.-->
 </body>
 </html>
