Commented login page

--- a/Login page.html
+++ b/Login page.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--3.-->
         <title>ColorMe login</title>
     </head>
     <body>
@@ -16,6 +17,6 @@
                 <label for="lname">Password: </label>
                 <input type="text" id="lname" name="lname" placeholder="Some password">
             </div>
-        </form>
+        </form> <!--3-->
     </body>
     </html>
