added sign up page and buttons to go back and forth with home page

--- a/Login page.html
+++ b/Login page.html
@@ -17,6 +17,14 @@
                 <label for="lname">Password: </label>
                 <input type="text" id="lname" name="lname" placeholder="Some password">
             </div>
-        </form> <!--3-->
+            <br>
+            <div>
+                <button type="submit">Login</button>
+            </div>
+        </form>
+
+        <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+
+        <p><a href="index.html">← Back to Home</a></p>
     </body>
-    </html>
+</html>
