--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                         <!--2.-->
     <div class="login-button-container">
       <a href="Login page.html" class="middle-login">Login</a>
+      <a href="signup.html" class="middle-signup">Sign Up</a>
     </div>              <!--2-->
                         <!--8.-->
     <div class="upload-box" id="drop">
