--- a/signup.html
+++ b/signup.html
@@ -6,37 +6,35 @@
     <title>ColorMe Signup</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <h2>Create Your ColorMe Account</h2>
+<body class="center-login">
 
-    <form>
-        <div>
-            <label for="username">Username: </label>
-            <input type="text" id="username" name="username" placeholder="Choose a username" required>
-        </div>
-        <br>
-        <div>
-            <label for="email">Email: </label>
-            <input type="email" id="email" name="email" placeholder="you@example.com" required>
-        </div>
-        <br>
-        <div>
-            <label for="password">Password: </label>
-            <input type="password" id="password" name="password" placeholder="Create a password" required>
-        </div>
-        <br>
-        <div>
-            <label for="confirm_password">Confirm Password: </label>
-            <input type="password" id="confirm_password" name="confirm_password" placeholder="Confirm your password" required>
-        </div>
-        <br>
-        <div>
-            <button type="submit">Sign Up</button>
-        </div>
-    </form>
+    <div class="wrapper">
+        <h1>Create your ColorMe Account</h1>
 
-    <p>Already have an account? <a href="login page.html">Login</a></p>
+        <form action="/signup" method="post">
+            <div>
+                <label for="username">Username: </label>
+                <input type="text" id="username" name="username" placeholder="Choose a username" required>
+            </div>
+            <br>
+            <div>
+                <label for="email">Email: </label>
+                <input type="email" id="email" name="email" placeholder="you@example.com" required>
+            </div>
+            <br>
+            <div>
+                <label for="password">Password: </label>
+                <input type="password" id="password" name="password" placeholder="Create a password" required>
+            </div>
+            <br>
+            <div>
+                <button type="submit">Sign Up</button>
+            </div>
+        </form>
+        <br>
+        <p>Already have an account? <a href="login page.html">Login</a></p>
+        <p><a href="index.html">← Back to Home</a></p>
+    </div>
 
-    <p><a href="index.html">← Back to Home</a></p>
 </body>
 </html>
