now hosts a server and tweak some changes

--- a/Login page.html
+++ b/Login page.html
@@ -18,7 +18,7 @@
                 <!--<input type="text" id="fname" name="fname" placeholder="Username">
                 -->
                 <div class="password-style">
-                    <input type="text" id="lname" name="lname" placeholder="Password">
+                    <input type="password" id="lname" name="lname" placeholder="Password">
                 </div>
                 <!--<input type="text" id="lname" name="lname" placeholder="Password">
                 -->
