--- a/Login page.html
+++ b/Login page.html
@@ -1,21 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <!--3.-->
-</head>
-<body class="center-login">
-    <div class="wrapper">
-        <br>
-        <h1>ColorMe Login</h1>
-
-        <div id="error-message" style="display: none;">
-            <p>Incorrect username or password.</p>
-        </div>
-
-        <form action="/login" method="post">
+ <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="style.css">
+        <!--3.-->
+    </head>
+    <body class="center-login">
+        <div class="wrapper">
+            <br>
+            <h1>ColorMe Login</h1>
+        <form>
             <div class="sec-pg-login-container">
                 <div class="username-style">
                     <input type="text" id="fname" name="username" placeholder="Username">
