--- a/Login page.html
+++ b/Login page.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
         <!--3.-->
+    <link rel="icon" type="image/x-icon" href="color-wheel-guide-isolated-on-transparent-vector-48630416.webp">
 </head>
 <body class="center-login">
     <div class="wrapper">
