--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <title>ColorMe</title> <!--1.-->
+  <link rel="icon" type="image/x-icon" href="color-wheel-guide-isolated-on-transparent-vector-48630416.webp">
 </head>
 <body>
   <div id="background"></div>
