--- a/signup.html
+++ b/signup.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ColorMe Signup</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="color-wheel-guide-isolated-on-transparent-vector-48630416.webp">
 </head>
 <body class="center-login">
 
