--- a/index.html
+++ b/index.html
@@ -11,13 +11,42 @@
   <link rel="icon" type="image/x-icon" href="color-wheel-guide-isolated-on-transparent-vector-48630416.webp">
   <style>
     canvas { display: none; }
+    .content {
+  position: relative;
+  z-index: 1;
+  display: flex;            /* Flexbox */
+  justify-content: center;  /* Center horizontally */
+  align-items: center;      /* Center vertically */
+  min-height: 100vh;        /* Full viewport height */
+  flex-direction: column;   /* Stack children vertically */
+  padding: 20px;
+  text-align: center;
+}
+
+/* Drop/upload box */
     #drop {
       background-color: #a1c4fd;
       padding: 20px;
       border-radius: 10px;
       text-align: center;
-      position: absolute;
+      width: 90%;
+      max-width: 500px;
+      box-sizing: border-box;
+      position: relative; /* remove absolute positioning */
     }
+
+    .content {
+      position: relative;
+      z-index: 1;
+      display: flex;            /* Flexbox */
+      justify-content: center;  /* Center horizontally */
+      align-items: center;      /* Center vertically */
+      min-height: 100vh;        /* Full viewport height */
+      flex-direction: column;   /* Stack children vertically */
+      padding: 20px;
+      text-align: center;
+    }
+
     .color-display {
       display: none;
       justify-content: center;
