--- a/Dashboard.html
+++ b/Dashboard.html
@@ -5,13 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="Dash.css">
+  <link rel="stylesheet" href="dashAnim.css">
    <link
     href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
     rel="stylesheet" href="./style.css">
 </head>
 
 <body class="sb-decor">
-  <aside>
+  <aside class="sidebar">
     <nav>
       <ul>
         <li>
@@ -38,6 +39,11 @@
             <span>Settings</span>
           </a>
         </li>
+        <a href="#">
+            <i class="bx bx-cog"></i>
+            <span>Log out</span>
+          </a>
+        </li>
         <li>
           <a href="#" data-resize-btn>
             <i class="bx bx-chevrons-right"></i>
@@ -47,23 +53,15 @@
       </ul>
     </nav>
   </aside>
-  <main>
+  <main class="mainAnim">
     <h1>Home Page</h1>
-    <p>
-      What's the plan
-    </p>
-    <div class="placeholder">
-      <div class="ph-1"></div>
-      <div class="ph-2"></div>
-      <div class="ph-3"></div>
-      <div class="ph-4"></div>
-      <div class="ph-5"></div>
-      <div class="ph-6"></div>
-      <div class="ph-7"></div>
-      <div class="ph-8"></div>
-
-    </div>
-  </main>
+    <p>What's the plan</p>
+      <nav class="animOptions-nav">
+      <a href="#">Home</a>
+      <a href="#">Start new report</a>
+      <a href="#">View previous report</a>
+      <span></span>
+    </nav>
   <script>
       const resizeBtn = document.querySelector('[data-resize-btn]');
       resizeBtn.addEventListener('click', function(e) {
@@ -73,57 +71,3 @@
     </script>
 </body>
 </html>
-<!--<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hello (User)</title>
-    <link rel="stylesheet" href="Dash.css">
-    <link
-    href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-    rel="stylesheet" href="./style.css">
-    <link rel="icon" href="./favicon.ico" type="image/x-icon">
-  </head>
-  <body class="sb-expanded">
-    <main>
-        <h1 class="center-welcome">What do you feel like doing?</h1>  
-    </main>
-    <aside>
-      <nav>
-        <ul>
-          <li>
-            <a href="#" class="active">
-              <i class="bx bx-home-circle"></i>
-              <span>Dashboard</span>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="bx bx-home-circle"></i>
-              <span>Color Collections</span>
-          </li>
-          <li>
-            <a href="#">
-              <i class="bx bx-home-circle"></i>
-              <span>Settings</span>
-          </li>
-          <li>
-            <a href="#" data-resize btn>
-              <i class="bx bx-home-circle"></i>
-              <span>Collapse</span>
-          </li>
-        </ul>
-      </nav>
-    </aside>
-    <script>
-      const resizeBtn = document.querySelector('[data-resize btn]');
-      resizeBtn.addEventListener('click', function(e) {
-        e.preventDefault();
-        document.body.classList.toggle('sb-expanded');
-      });
-    </script>
-  </body>
-</html>
--->
